# roe

./: .gitignore  Makefile  README.md  docker-compose.arm-overrides.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.local  pyproject.toml
backend/src/: .env.dist  app.py  pytest.ini  start_app.sh  start_app_local.sh
backend/src/adapters/into/http/: video.py
backend/src/application/exceptions/: video_processing.py
backend/src/application/use_case/: capture_video_frames.py  find_video_frame.py  prepare_frame_for_download.py  store_video.py
backend/src/configs/: log_conf.yml
backend/src/tests/integration/: conftest.py  test_app.py
backend/src/utils/: env.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/apiClient/: backendClient.ts  healthCheck.ts
frontend/src/components/: SampleHello.tsx
