[tool.poetry]
name = "be-app"
version = "0.1.0"
description = ""
authors = ["platowski <latosbassman@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
pydantic = "^2.5.2"
uvicorn = "^0.30.1"
pyyaml = "^6.0.1"
pydantic-settings = "^2.0.3"
aiohttp = "^3.9.1"
openai = "^1.37.0"
tenacity = "^8.5.0"
opencv-python = "^4.10.0.84"
transformers = { version = "^4.12.0", extras = ["torch"] }
pillow = "^10.4.0"
pyright = "^1.1.378"

[tool.poetry.dev-dependencies]
black = { version = "^24.4.2", extras = [ "d" ] }
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[tool.poetry.group.dev.dependencies]
setuptools = "^72.1.0"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/uploads"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "none"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Linux"

executionEnvironments = [
    { root = "src" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
